# crowdsim

./: pyproject.toml  ruff.toml  ty.toml
src/crowdsim/: __init__.py  aisle.py  global_linear_force.py  main.py  particle.py  particle_group.py  typings.py
